Fix app icon squashtastrophe

--- a/web_app_drawer/static/src/less/app_drawer.less
+++ b/web_app_drawer/static/src/less/app_drawer.less
@@ -14,6 +14,8 @@
 
     .navbar-left {
         
+        width: 100%;
+        
         li {
             padding: 0;
         }
